# cooksense

./: .editorconfig  .gitignore  LICENSE  README.md
.github/workflows/: android-ci.yml  backend-ci.yml
android/: build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/cooksense/: MainActivity.kt
android/app/src/main/java/com/cooksense/ui/: HelloScreen.kt
android/app/src/test/java/com/cooksense/: HelloScreenSmokeTest.kt
backend/: .env.example  README.md  pyproject.toml
backend/api/: deps.py  main.py
backend/api/middleware/: user_id.py
backend/api/models/: meal_plan.py  profile.py  qa.py  recipe.py  search.py  shopping.py  vision.py
backend/api/routes/: healthz.py  meal_plan.py  profile.py  recipes.py  vision.py
backend/api/utils/: image_validation.py
backend/infrastructure/: config.py
backend/infrastructure/db/: chroma_client.py  ingest_corpus.py  recipe_repository.py  translation_pipeline.py
backend/infrastructure/storage/: daily_usage.py  llm_cache.py  meal_plan_repository.py  models.py  postgres.py  profile_repository.py
backend/stub/: README.md  __init__.py  meal_planner.py  personalized_describer.py  qa_responder.py  ranker.py  reasoner.py  shopping_list_builder.py  translator.py  vision_extractor.py
backend/tests/: conftest.py  test_deps.py  test_healthz.py  test_stub.py  test_translator_stub.py
backend/tests/api/: test_image_validation.py  test_meal_plan_cache.py  test_meal_plan_endpoint.py  test_meal_plan_model.py  test_meal_plan_persistence.py  test_meal_plan_rate_limit.py  test_profile.py  test_profile_model.py  test_recipe_model.py  test_recipes_ask.py  test_recipes_search.py  test_shopping_endpoint.py  test_shopping_language.py  test_shopping_model.py  test_shopping_ownership.py  test_shopping_pantry.py  test_user_id_middleware.py  test_vision_endpoint.py
backend/tests/fixtures/: sample_recipes.json
backend/tests/fixtures/images/: oversized_marker.txt
backend/tests/infrastructure/: test_chroma_client.py  test_config.py  test_daily_usage_limiter.py  test_ingest_corpus.py  test_llm_cache.py  test_meal_plan_models.py  test_meal_plan_repository.py  test_profile_repository.py  test_recipe_repository.py  test_translation_pipeline.py
backend/tests/stub/: test_meal_planner.py  test_personalized_describer.py  test_qa_responder.py  test_reasoner_normalize.py  test_shopping_list_builder.py  test_vision_extractor.py
docs/: phase-0-spec.md  phase-1-spec.md  phase-2-spec.md  phase-3-spec.md  phase-4-spec.md  phase-5-spec.md
